--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,6 @@
 {
-  "version": 2,
-  "buildCommand": "pnpm install && pnpm build",
-  "installCommand": "pnpm install",
-  "outputDirectory": "client/dist",
+  "buildCommand": "pnpm build",
+  "outputDirectory": "dist/public",
   "rewrites": [
     {
       "source": "/api/(.*)",
