--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
   "buildCommand": "pnpm build",
   "outputDirectory": "dist/public",
-  "rewrites": [
+  "routes": [
     {
-      "source": "/api/(.*)",
-      "destination": "/api"
+      "src": "/api/(.*)",
+      "dest": "/api/index.js"
     }
   ],
   "functions": {
