--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,11 @@
       "dest": "/api/index.js"
     },
     {
-      "src": "/(.*)",
+      "src": "/assets/(.*)",
+      "dest": "/assets/$1"
+    },
+    {
+      "src": "/.*",
       "dest": "/index.html"
     }
   ],
