--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,9 @@
 {
   "buildCommand": "pnpm build",
-  "outputDirectory": "dist/public",
   "routes": [
     {
-      "src": "/api/(.*)",
+      "src": "/(.*)",
       "dest": "/api/index.js"
-    },
-    {
-      "src": "/assets/(.*)",
-      "dest": "/assets/$1"
-    },
-    {
-      "src": "/.*",
-      "dest": "/index.html"
     }
   ],
   "functions": {
