--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,9 @@
       "memory": 2048,
       "maxDuration": 30
     }
-  }
+  },
+  "rewrites": [
+    { "source": "/api/(.*)", "destination": "/api/$1" },
+    { "source": "/(.*)", "destination": "/" }
+  ]
 }
-
