--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,10 @@
     "api/[...routes].ts": {
       "memory": 2048,
       "maxDuration": 30
+    },
+    "api/*.ts": {
+      "memory": 1024,
+      "maxDuration": 10
     }
   },
   "rewrites": [
